--- a/HW3N/HW3N/Views/AddRecipe.xaml
+++ b/HW3N/HW3N/Views/AddRecipe.xaml
@@ -5,44 +5,46 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="HW3N.Views.AddRecipe">
 
-    <StackLayout Spacing="10" Padding="15">
-        <Label Text="Add Recipe" FontSize="Medium" />
-        <Label Text="Recipe Name"/>
+  <StackLayout Spacing="10" Padding="15">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                 </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+        <Label Text="Add Recipe" FontSize="Medium" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" />
+        <Label Text="Recipe Name" Grid.Row="1" Grid.Column="0" />
         <Entry Placeholder="Enter Your Recipe Name Here"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Label Text="Ingredients"/>
-        <Entry Placeholder="First Ingredient"
+               Text="{Binding Name}" Grid.Row="2" Grid.Column="0"></Entry>
+        <Label Text="Ingredients" Grid.Row="3" Grid.Column="0"/>
+        <Entry Placeholder="Ingredient Name"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Second Ingredient"
+               Text="{Binding Name}" Grid.Row="4" Grid.Column="0"></Entry>
+        <Entry Placeholder="Ingredient Amount"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Third Ingredient"
+               Text="{Binding Name}" Grid.Row="4" Grid.Column="1"></Entry>
+        <Entry Placeholder="Ingredient Unit (like cups, TSP)"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Fourth Ingredient"
-               PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Fifth Ingredient"
-               PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Sixth Ingredient"
-               PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Seventh Ingredient"
-               PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Entry Placeholder="Eighth Ingredient"
-               PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Label Text="Recipe Instructions:"/>
+               Text="{Binding Name}" Grid.Row="4" Grid.Column="2"></Entry>
+        
+        <Label Text="Recipe Instructions:" Grid.Row="5" Grid.Column="0"/>
         <Entry Placeholder="Enter Your Recipe Instructions Here"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Button Text="Add Recipe"/>
-
-
+               Text="{Binding Name}" Grid.Row="6" Grid.Column="0"></Entry>
+        <Button Text="Add Recipe" Grid.Row="7" Grid.Column="0"/>
+           
+        </Grid>
     </StackLayout>
 
 </ContentPage>
