--- a/HW3N/HW3N/Views/AddRecipe.xaml
+++ b/HW3N/HW3N/Views/AddRecipe.xaml
@@ -14,34 +14,33 @@
         <Label Text="Ingredients"/>
         <Entry Placeholder="First Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName1}"></Entry>
         <Entry Placeholder="Second Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName2}"></Entry>
         <Entry Placeholder="Third Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName3}"></Entry>
         <Entry Placeholder="Fourth Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName4}"></Entry>
         <Entry Placeholder="Fifth Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName5}"></Entry>
         <Entry Placeholder="Sixth Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName6}"></Entry>
         <Entry Placeholder="Seventh Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName7}"></Entry>
         <Entry Placeholder="Eighth Ingredient"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
+               Text="{Binding IngredientName8}"></Entry>
         <Label Text="Recipe Instructions:"/>
         <Entry Placeholder="Enter Your Recipe Instructions Here"
                PlaceholderColor="LightGray"
-               Text="{Binding Name}"></Entry>
-        <Button Text="Add Recipe"/>
-
+               Text="{Binding Instructions}"></Entry>
+        <Button Text="Add Recipe" Command="{Binding Add}"/>
 
     </StackLayout>
 
