--- a/HW3N/HW3N/Views/MainPage.xaml
+++ b/HW3N/HW3N/Views/MainPage.xaml
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:b="clr-namespace:Prism.Behaviours;assembly=Prism.Forms"
+             xmlns:c="clr-namespace:HW3N.Converters" 
              x:Class="HW3N.Views.MainPage"
              Title="{Binding Title}">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <c:ItemTappedEventArgsConverter x:Key="itemTappedEventArgsConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
 
@@ -11,6 +19,14 @@
         <Button Text="Edit Recipe" Command="{Binding EditRecipe}" ></Button>
 
         <ListView x:Name="ReferencesNew" ItemsSource="{Binding recipeList}">
+            <ListView.Behaviors>
+                <b:EventToCommandBehaviour EventName="ItemTapped"
+                                       Command="{Binding ItemTappedCommand}"
+                                       EventArgsConverter="{StaticResource itemTappedEventArgsConverter}" />
+
+
+            </ListView.Behaviors>
+            
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
