--- a/HW3N/HW3N/Views/MainPage.xaml
+++ b/HW3N/HW3N/Views/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:b="clr-namespace:Prism.Behaviours;assembly=Prism.Forms"
+             xmlns:b="clr-namespace:Prism.Behaviors;assembly=Prism.Forms"
              xmlns:c="clr-namespace:HW3N.Converters" 
              x:Class="HW3N.Views.MainPage"
              Title="{Binding Title}">
@@ -20,7 +20,7 @@
 
         <ListView x:Name="ReferencesNew" ItemsSource="{Binding recipeList}">
             <ListView.Behaviors>
-                <b:EventToCommandBehaviour EventName="ItemTapped"
+                <b:EventToCommandBehavior EventName="ItemTapped"
                                        Command="{Binding ItemTappedCommand}"
                                        EventArgsConverter="{StaticResource itemTappedEventArgsConverter}" />
 
